Fix table of contents going off-screen

--- a/_sass/site/post-navigation.scss
+++ b/_sass/site/post-navigation.scss
@@ -23,6 +23,7 @@
     width: max-content;
     padding: 0;
     width: max-content;
+    max-width: 100%;
     margin: auto;
   }
 
